--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                                 <a class="nlink underline-center" href="allimage.html">Experience</a>
                         </li>
                         <li class="cursor-pointer pl-3 pr-3 duration-500 ">
-                                <a class="nlink underline-center" href="contactus.html">Services</a>
+                                <a class="nlink underline-center" href="services-1.html">Services</a>
                         </li>
                         <li class="cursor-pointer pl-3 pr-3 duration-500 ">
-                                <a class="nlink underline-center" href="contactus.html">Contact</a>
+                                <a class="nlink underline-center" href="contact.html">Contact</a>
                         </li>
                         <!-- <li class="cursor-pointer pl-3 pr-3 duration-500 ">
                                 <a class="nlink underline-center" href="contactus.html">Discover More</a>
