--- a/index.html
+++ b/index.html
@@ -279,14 +279,14 @@
         </section>
         <!-- <a href="https://storyset.com/marketing">Marketing illustrations by Storyset</a> -->
         <section id=""
-                class="pr-4 pl-4 overflow-hidden h-auto md:h-auto py-10 min-h-[38rem] min-w-min flex-col justify-center  bg-gradient-to-r from-[#f1f0f0] to-white ">
+                class=" overflow-hidden   min-h-min  flex-col justify-center  bg-gradient-to-r from-[#f1f0f0] to-white ">
 
-                <div class=" h-[15%] text-5xl font-bold flex justify-center items-center">
+                <div class=" h-[5rem] text-5xl font-bold flex justify-center items-center">
                         <h1 class="playfair-display ">Why Choose us </h1>
                 </div>
 
                 <div
-                        class="hidden background_choose md:static space-y-4  overflow-hidden flex-wrap space-x-7  w-full h-[84%] md:flex items-center justify-center">
+                        class="hidden background_choose md:static space-y-4  overflow-hidden flex-wrap space-x-7 p-4  w-full min-h-[35rem]   md:flex items-center justify-center">
                         <div></div>
 
                         <!-- <div class="w-[300px] h-[200px] rounded-2xl overflow-hidden "> -->
