--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
                 rel="stylesheet">
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="project/Website_contents/logo.svg" type="image/x-icon">
         <title>MP Bio Reg Consulting</title>
 
@@ -73,8 +73,7 @@
 
                 <div class="w-[14rem] flex items-center justify-center  h-full">
 
-                        <img class="w-full  object-contain h-full" id="logo" src="./images/logo.svg"
-                                alt="" srcset="">
+                        <img class="w-full  object-contain h-full" id="logo" src="./images/logo.svg" alt="" srcset="">
 
                 </div>
                 <ul
@@ -165,8 +164,8 @@
 
                         <div class="w-[10rem] flex items-center justify-center  h-full">
 
-                                <img class="w-full  object-contain h-full" id="logo"
-                                        src="./images/logo.svg" alt="" srcset="">
+                                <img class="w-full  object-contain h-full" id="logo" src="./images/logo.svg" alt=""
+                                        srcset="">
 
                         </div>
                         <button class="text-gray-600">
@@ -473,8 +472,7 @@
                         <div class="md:flex md:justify-between">
                                 <div class="mb-6 md:mb-0">
                                         <a href="https://flowbite.com/" class="flex items-center">
-                                                <img src="./images/logo.svg" class="h-10 me-3"
-                                                        alt="FlowBite Logo" />
+                                                <img src="./images/logo.svg" class="h-10 me-3" alt="FlowBite Logo" />
                                                 <span
                                                         class="self-center text-2xl font-semibold whitespace-nowrap"></span>
                                         </a>
