--- a/services-1.html
+++ b/services-1.html
@@ -80,21 +80,19 @@
 <body class="poppins-thin" id="content">
 
         <nav
-                class="hidden md:fixed md:flex backdrop-blur-lg justify-between z-30 duration-500 ease-in-out  h-[5.8rem] w-full items-center pl-6 pr-3 md:pr-0  overflow-hidden">
-                <!-- <h1 class="font-bold text-4xl "><a href="">BADAAM NET</a></h1> -->
-
+                class="absolute hidden md:absolute md:flex backdrop-blur-lg justify-between z-30 duration-500 ease-in-out  h-[5.8rem] w-full items-center pl-6 pr-3 md:pr-0  overflow-hidden">
 
 
                 <div class="w-[14rem] flex items-center justify-center  h-full">
 
-                        <img class="w-full  object-contain h-full" id="logo" src="/project/Website_contents/Logo-01.png"
+                        <img class="w-full  object-contain h-full" id="logo" src="./images/logo.svg"
                                 alt="" srcset="">
 
                 </div>
                 <ul
                         class="md:flex md:space-x-7 justify-start items-center pb-3 min-w-[26%] w-fit h-full text-xl hidden lg:static z-[-1]  md:top-0 transition-all ease-in duration-500 poppins-thin">
                         <li class="cursor-pointer pl-3 pr-3 duration-500 ">
-                                <a class="nlink underline-center" href="index.html">Home</a>
+                                <a class="nlink underline-center poppins-thin" href="index.html">Home</a>
                         </li>
                         <li class="cursor-pointer pl-3 pr-3 duration-500 ">
                                 <a class="nlink underline-center" href="allimage.html">Experience</a>
@@ -105,9 +103,6 @@
                         <li class="cursor-pointer pl-3 pr-3 duration-500 ">
                                 <a class="nlink underline-center" href="contact.html">Contact</a>
                         </li>
-                        <!-- <li class="cursor-pointer pl-3 pr-3 duration-500 ">
-                                <a class="nlink underline-center" href="contactus.html">Discover More</a>
-                        </li> -->
 
                 </ul>
 
