--- a/services-1.html
+++ b/services-1.html
@@ -131,9 +131,9 @@
         </aside>
 
 
-        <div  class="container mx-auto px-4 pt-32 md:pt-24">
+        <div  class="green-brush container mx-auto px-4 pt-32 md:pt-24">
             <h3 class="text-5xl text-center font-semibold text-navy-800 mb-6 ">
-               <span class="text-green-400 ">Scientific</span>  and <br> Regulatory <span class="green-brush playfair-display font-thin">Advice</span>
+               <span class="text-green-400 ">Scientific</span>  and <br> Regulatory <span class="green-brush playfair-display font-thin ">Advice</span>
             </h3>
         </div>
 
