--- a/services-2.html
+++ b/services-2.html
@@ -71,8 +71,8 @@
                         z-index: 5;
                         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
                 }
-                .green-brush {
-                        background: url(/asset/services1/Greenbrush.png) ;
+                .blue-brush {
+                        background: url(/asset/services2/Bluebrush.png) ;
                 }
         </style>
 </head>
@@ -130,9 +130,9 @@
 
 </aside>
 
-        <div  class="container mx-auto px-4 pt-32 md:pt-24">
+        <div  class="blue-brush container mx-auto px-4 pt-32 md:pt-24">
             <h3 class="text-5xl text-center font-semibold text-navy-800 mb-6 ">
-               <span class="text-blue-400 ">CMC </span>Dossier <br> <span class="blue-brush playfair-display font-thin"> Authoring</span>
+               <span class="text-blue-400 ">CMC </span>Dossier <br> <span class=" playfair-display font-thin"> Authoring</span>
             </h3>
         </div>
 
