--- a/services-3.html
+++ b/services-3.html
@@ -71,8 +71,8 @@
                         z-index: 5;
                         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
                 }
-                .green-brush {
-                        background: url(/asset/services1/Greenbrush.png) ;
+                .purple-brush {
+                        background: url(/asset/services3/Purplebrush.png) ;
                 }
         </style>
 </head>
@@ -131,9 +131,9 @@
         </aside>
 
 
-        <div  class="container mx-auto px-4 pt-32 md:pt-24">
+        <div  class=" purple-brush container mx-auto px-4 pt-32 md:pt-24">
             <h3 class="text-5xl text-center font-semibold text-navy-800 mb-6 ">
-               <span class="text-purple-400 ">Training</span>  and <br> <span class="purple-brush playfair-display font-thin">Coaching</span>
+               <span class="text-purple-400 ">Training</span>  and <br> <span class=" playfair-display font-thin">Coaching</span>
             </h3>
         </div>
 
