yogesh code bug is fixed

--- a/services-1.html
+++ b/services-1.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="input.css">
         <link rel="stylesheet" href="svg_animation.css">
         <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" /> <!-- Recommended -->
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-        <link rel="stylesheet" href="./src/output.css">
+        <!-- <link rel="stylesheet" href="./src/output.css"> -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
@@ -178,12 +178,12 @@
                         
                         <div class="w-full md:w-1/2 m-auto text-justify">
                                
-                                <h1 class="text-3xl font-semibold text-green-400 mb-6 mt-4 playfair-normal">Development</h1>
-                                <ul class="list-disc">
-                                        <li class="mb-4 playfair-normal font-medium">
+                                <h1 class="text-5xl font-semibold text-green-400 mb-6 mt-4 playfair-normal">Development</h1>
+                                <ul class="list-disc text-xl">
+                                        <li class="mb-4 playfair-normal">
                                         Scientific advice on QC release specifications, stability programs, characterization of cell and seed bank systems, viral clearance, process validation, product comparability during Phase 1 to Phase 3
                                         </li>
-                                        <li class="mb-4 playfair-normal font-medium">
+                                        <li class="mb-4 playfair-normal ">
                                         Scientific advice on final CMC package to include in the marketing authorization, including phase 3/commercial process comparability, commercial specifications and stability programs.
                                         </li>
                                 </ul>
