--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="input.css">
+        <link rel="stylesheet" href="svg_animation.css">
         <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+        <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" /> <!-- Recommended -->
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+        <!-- <link rel="stylesheet" href="./src/output.css"> -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
                 rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <link rel="shortcut icon" href="project/Website_contents/logo.svg" type="image/x-icon">
-        <title>MP Bio Reg Consulting</title>
+
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+                rel="stylesheet">
+        <title>Veffects</title>
 
 
         <style>
@@ -67,14 +71,55 @@
 
 <body class="poppins-thin overflow-x-hidden" id="content">
 
-        <nav
-                class="absolute hidden md:absolute md:flex backdrop-blur-lg justify-between z-30 duration-500 ease-in-out  h-[5.8rem] w-full items-center pl-6 pr-3 md:pr-0  overflow-hidden">
+        <nav class=" absolute h-fit w-full text-black">
+                <div class="container mx-auto px-4 md:flex justify-between items-center gap-6">
+                        <!-- Logo -->
+                        <div class="flex items-center justify-between md:w-auto w-full">
+                                <a href="#" class="flex items-center py-5 px-2 text-white flex-1">
+                                        <span class="font-bold w-[10rem]"><img  src="images/logo.svg" alt="" srcset=""></span>
+                                </a>
+                                <!-- Mobile Menu Button -->
+                                <div class="md:hidden flex items-center">
+                                        <button class="mobile-menu-button" >
+                                                <ion-icon onclick="change(this)" name="menu"></ion-icon>
+                                        </button>
+                                </div>
+                        </div>
+                        <!-- Primary Navigation -->
+                        <div
+                                class="hidden  font-normal md:flex md:flex-row flex-col items-center justify-start md:space-x-1 navigation-menu pb-3 md:pb-0 navigation-menu">
+                                <a href="./index.html" class="py-2  px-3 block hover:text-[#3d7cbc]">Home</a>
+                                <a href="#" class="py-2 px-3 block hover:text-[#3d7cbc]">Experience</a>
 
 
-                <div class="w-[14rem] flex items-center justify-center  h-full">
+                                <!-- Dropdown Menu -->
+                                <div class="relative">
 
-                        <img class="w-full  object-contain h-full" id="logo" src="./images/logo.svg" alt="" srcset="">
+                                        <button
+                                                class="dropdown-toggle  py-2 px-3  flex items-center hover:text-[#3d7cbc] gap-2 rounded">
+                                                <span class="pointer-events-none hover:text-[#3d7cbc]">Services</span>
+                                                <svg class="w-3 h-3 pointer-events-none"
+                                                        xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                        viewBox="0 0 24 24">
+                                                        <title>chevron-down</title>
+                                                        <g fill="none">
+                                                                <path d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                                                                        stroke="currentColor" stroke-width="1.5"
+                                                                        stroke-linecap="round" stroke-linejoin="round">
+                                                                </path>
+                                                        </g>
+                                                </svg>
+                                        </button>
 
+                                        <div
+                                                class="dropdown-menu absolute hidden bg-gray-50 text-black text-center rounded-b-lg left-[-6rem] pb-2 w-[18rem]">
+                                                <a href="./services-1.html" class="block px-2 py-2 hover:text-[#3d7cbc] capitalize ">Scientific and regulatory advice</a>
+                                                <a href="./services-2.html" class="block px-2 py-2 hover:text-[#3d7cbc] capitalize">CMC dossier authoring</a>
+                                                <a href="./services-3.html" class="block px-2 py-2 hover:text-[#3d7cbc] capitalize">Training and coaching</a>
+                                        </div>
+                                </div>
+                                <a href="contact/contact.html" class="py-2 px-3 block">Contact</a>
+                        </div>
                 </div>
         </nav>
         <!-- Mobile Sidebar -->
@@ -92,7 +137,7 @@
                         <a class="nlink underline-center" href="index.html">Home</a>
                     </li>
                     <li class="cursor-pointer">
-                        <a class="nlink underline-center" href="allimage.html">Experience</a>
+                        <a class="nlink underline-center" href="#">Experience</a>
                     </li>
                     <div class="w-full flex justify-center flex-col group">
                         <button class="flex justify-center  items-center text-gray-800 hover:text-indigo-600 focus:outline-none">
@@ -102,19 +147,19 @@
                             </svg>
                         </button>
                         <div class=" text-sm mt-2 duration-200 ease-out  w-full capitalize rounded-md shadow-lg hidden group-hover:block">
-                            <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-indigo-600 hover:text-white">Scientific and regulatory advice</a>
-                            <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-indigo-600 hover:text-white">CMC dossier authoring</a>
-                            <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-indigo-600 hover:text-white">Training and coaching</a>
+                            <a href="./services-1.html" class="block px-4 py-2 text-gray-800 hover:bg-indigo-600 hover:text-white">Scientific and regulatory advice</a>
+                            <a href="./services-2.html" class="block px-4 py-2 text-gray-800 hover:bg-indigo-600 hover:text-white">CMC dossier authoring</a>
+                            <a href="./services-3.html" class="block px-4 py-2 text-gray-800 hover:bg-indigo-600 hover:text-white">Training and coaching</a>
                         </div>
                     </div>
                     <li class="cursor-pointer">
-                        <a class="nlink underline-center" href="contact.html">Contact</a>
+                        <a class="nlink underline-center" href="contact/contact.html">Contact</a>
                     </li>
                 </ul>
             </aside>
 
         <header
-                class="background poppins-thin min-h-[600px] h-[100vh] w-full md:flex flex-col bg-[#37517e] justify-end md:relative items-center box-border pb-4 hidden">
+                class="background z-20 poppins-thin min-h-[600px] h-[100vh] w-full md:flex flex-col  justify-end  items-center box-border pb-4 hidden">
                 <div class="h-full w-full max-w-[1524px] flex justify-center items-end overflow-hidden">
                         <div
                                 class="w-full flex flex-col md:flex-row md:justify-evenly lg:justify-center items-center md:gap-4 h-[90%] md:h-[85%]">
@@ -140,7 +185,7 @@
                                                 <button
                                                         class="p-1 cursor-pointer hover:scale-105 text-xl rounded-tl-2xl overflow-hidden rounded-br-2xl from-[#8f68ac] via-[#3d7cbc] to-[#5db847] bg-gradient-to-r opacity-0 transform translate-y-10 gsap-button">
                                                         <span
-                                                                class="block cursor-pointer text-black px-4 py-2 rounded-tl-2xl rounded-br-2xl bg-white">Schedule
+                                                                class="block cursor-pointer text-black px-4 py-2 rounded-tl-2xl rounded-br-2xl hover:bg-transparent bg-white duration-200 hover:text-white ease-in ">Schedule
                                                                 a Consultation</span>
                                                 </button>
                                         </div>
@@ -156,21 +201,7 @@
 
 
         <div class="w-full box-border  h-[100vh] min-h-[950px]  background  py-8 md:hidden">
-                <header class="h-[3rem] flex justify-between items mb-10 pl-4 pr-4 ">
-
-                        <div class="w-[10rem] flex items-center justify-center  h-full">
-
-                                <img class="w-full  object-contain h-full" id="logo" src="./images/logo.svg" alt=""
-                                        srcset="">
-
-                        </div>
-                        <button class="text-gray-600">
-                                <ion-icon class="md:hidden text-black text-3xl" name="menu"
-                                        onclick="change(this)"></ion-icon>
-
-                        </button>
-                </header>
-
+     
                 <h1 class="text-[8.4vw]  pr-4 pl-2  mt-16 text-gray-800 mb-4 leading-tight">
                         Redefining <span
                                 class="biological playfair-display text-[8.45vw] text-white italic lg:text-6xl">Biological</span><br />
@@ -286,8 +317,8 @@
 
                         <!-- <div class="w-[300px] h-[200px] rounded-2xl overflow-hidden "> -->
 
-                        <div class="card">
-                                <div class="card-inner">
+                        <div class="card rounded-xl">
+                                <div class="card-inner rounded-xl">
 
                                         <div class="card-front capitalize p-2 ">
                                                 <p>Regulatory strategy optimization
@@ -463,7 +494,7 @@
 
 
 
-        <footer class="bg-white">
+        <footer class="bg-gray-50">
                 <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8 lg:px-12">
                         <div class="md:flex md:justify-between">
                                 <div class="mb-6 md:mb-0">
