work is incomplete

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 </a>
                                 <!-- Mobile Menu Button -->
                                 <div class="md:hidden flex items-center">
-                                        <button class="mobile-menu-button" >
+                                        <button class="mobile-menu-button text-3xl" >
                                                 <ion-icon onclick="change(this)" name="menu"></ion-icon>
                                         </button>
                                 </div>
