--- a/services-3.html
+++ b/services-3.html
@@ -167,9 +167,9 @@
                 </ul>
             </aside>
 
-        <div  class=" purple-brush container mx-auto px-4 pt-32 md:pt-40">
+        <div  class=" container mx-auto px-4 pt-32 md:pt-40">
             <h3 class="text-5xl text-center font-semibold text-navy-800 mb-6 ">
-               <span class="text-purple-400 ">Training</span>  and <br> <span class=" playfair-display font-thin">Coaching</span>
+               <span class="text-purple-400 ">Training</span>  and <br> <span class=" Coaching playfair-display font-thin">Coaching</span>
             </h3>
         </div>
 
