--- a/services-2.html
+++ b/services-2.html
@@ -167,9 +167,9 @@
                 </ul>
             </aside>
 
-        <div  class="blue-brush container mx-auto px-4 pt-32 md:pt-40">
+        <div  class=" container mx-auto px-4 pt-32 md:pt-40">
             <h3 class="text-5xl text-center font-semibold text-navy-800 mb-6 ">
-               <span class="text-blue-400 ">CMC </span>Dossier <br> <span class=" playfair-display font-thin"> Authoring</span>
+               <span class="text-blue-400 ">CMC </span>Dossier <br> <span class="Authoring playfair-display font-thin"> Authoring</span>
             </h3>
         </div>
 
