service 1,3 img fix

--- a/services-1.html
+++ b/services-1.html
@@ -187,7 +187,11 @@
                         </div>
 
                         <div class="w-1/2 min-[500px]:w-2/5  min-[900px]:w-1/5 pt-1 pr-2 md:pr-0 gsap-img1s">
-                                <img class="" src="asset/services1/Image-1.png" alt="" srcset="">
+                                <!-- <img class="" src="asset/services1/Image-1.png" alt="" srcset=""> -->
+                                <picture>
+                                        <source media="(min-width: 766px)" srcset="asset/services1/Image-1.png">
+                                        <img src="asset/services1/Srv1.png" alt="IfItDoesntMatchAnyMedia">
+                                </picture>
                         </div>
                 </div>
         </section>
@@ -196,7 +200,11 @@
                 <div class="p-4 md:p-0 m-4 flex flex-col-reverse  min-[760px]:flex-col justify-between md:flex-row items-center ">
                         
                         <div class="w-1/2 min-[500px]:w-2/5  min-[900px]:w-1/5 pt-1 pr-2 md:pr-0 gsap-img2s">
-                                <img class="" src="asset/services1/Image-2.png" alt="" srcset="">
+                                <!-- <img class="" src="asset/services1/Image-2.png" alt="" srcset=""> -->
+                                <picture>
+                                        <source media="(min-width: 766px)" srcset="asset/services1/Image-2.png">
+                                        <img src="asset/services1/Srv2.png" alt="IfItDoesntMatchAnyMedia">
+                                </picture>
                         </div>
 
                         <div class="w-full md:w-1/2 m-auto text-justify">
@@ -237,7 +245,11 @@
                         </div>
 
                         <div class="w-1/2 min-[500px]:w-2/5  min-[900px]:w-1/5 pt-1 pr-2 md:pr-0 gsap-img1s">
-                                <img class="" src="asset/services1/Image-3.2.png" alt="" srcset="">
+                                <!-- <img class="" src="asset/services1/Image-3.2.png" alt="" srcset=""> -->
+                                <picture>
+                                        <source media="(min-width: 766px)" srcset="asset/services1/Image-3.2.png">
+                                        <img src="asset/services1/Srv3.png" alt="IfItDoesntMatchAnyMedia">
+                                </picture>
                         </div>
                 </div>
         </section>
