--- a/services-3.html
+++ b/services-3.html
@@ -185,7 +185,11 @@
                         </div>
 
                         <div class="w-1/2 min-[500px]:w-2/5  min-[900px]:w-1/5 pt-1 pr-2 md:pr-0 gsap-img1s">
-                                <img class="" src="asset/services3/Image-6.png" alt="" srcset="">
+                                <!-- <img class="" src="asset/services3/Image-6.png" alt="" srcset=""> -->
+                                <picture>
+                                        <source media="(min-width: 766px)" srcset="asset/services3/Image-6.png">
+                                        <img src="asset/services3/Srv4.png" alt="IfItDoesntMatchAnyMedia">
+                                </picture>
                         </div>
                 </div>
         </section>
@@ -194,7 +198,11 @@
                 <div class="p-4 md:p-0 m-4 flex flex-col-reverse  min-[760px]:flex-col justify-between md:flex-row items-center ">
                         
                         <div class="w-1/2 min-[500px]:w-2/5  min-[900px]:w-1/5 pt-1 pr-2 md:pr-0 gsap-img2s">
-                                <img class="" src="asset/services3/Image-7.png" alt="" srcset="">
+                                <!-- <img class="" src="asset/services3/Image-7.png" alt="" srcset=""> -->
+                                <picture>
+                                        <source media="(min-width: 766px)" srcset="asset/services3/Image-7.png">
+                                        <img src="asset/services3/Srv5.png" alt="IfItDoesntMatchAnyMedia">
+                                </picture>
                         </div>
 
                         <div class="w-full md:w-1/2 m-auto text-justify">
@@ -228,7 +236,11 @@
                         </div>
 
                         <div class="w-1/2 min-[500px]:w-2/5  min-[900px]:w-1/5 pt-1 pr-2 md:pr-0 gsap-img1s">
-                                <img class="" src="asset/services3/Image-8.2.png" alt="" srcset="">
+                                <!-- <img class="" src="asset/services3/Image-8.2.png" alt="" srcset=""> -->
+                                <picture>
+                                        <source media="(min-width: 766px)" srcset="asset/services3/Image-8.2.png">
+                                        <img src="asset/services3/Srv6.png" alt="IfItDoesntMatchAnyMedia">
+                                </picture>
                         </div>
                 </div>
         </section>
