sushil changes and contact us page is updated.

--- a/experince.html
+++ b/experince.html
@@ -113,7 +113,7 @@
                             coaching</a>
                     </div>
                 </div>
-                <a href="contact/contact.html"  class="py-2 hover:text-[#3d7cbc] px-3 block">Contact</a>
+                <a href="./contact.html"  class="py-2 hover:text-[#3d7cbc] px-3 block">Contact</a>
             </div>
         </div>
     </nav>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <li class="cursor-pointer">
-                <a class="nlink underline-center" href="contact/contact.html">Contact</a>
+                <a class="nlink underline-center" href="./contact.html">Contact</a>
             </li>
         </ul>
     </aside>
