--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                                         and coaching</a>
                                         </div>
                                 </div>
-                                <a href="contact/contact.html" class="py-2 px-3 block">Contact</a>
+                                <a href="./contact.html" class="py-2 px-3 block">Contact</a>
                         </div>
                 </div>
         </nav>
@@ -173,7 +173,7 @@
                                 </div>
                         </div>
                         <li class="cursor-pointer">
-                                <a class="nlink underline-center" href="contact/contact.html">Contact</a>
+                                <a class="nlink underline-center" href="./contact.html">Contact</a>
                         </li>
                 </ul>
         </aside>
