--- a/services-3.html
+++ b/services-3.html
@@ -123,7 +123,7 @@
                                                 <a href="./services-3.html" class="block px-2 py-2 hover:text-[#3d7cbc] capitalize">Training and coaching</a>
                                         </div>
                                 </div>
-                                <a href="contact/contact.html" class="py-2 px-3 block">Contact</a>
+                                <a href="./contact.html" class="py-2 px-3 block">Contact</a>
                         </div>
                 </div>
         </nav>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     <li class="cursor-pointer">
-                        <a class="nlink underline-center" href="contact/contact.html">Contact</a>
+                        <a class="nlink underline-center" href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </aside>
